SM-138: create User, Space, ReperationRequest, ReperationRequestMaterial and ReparationRequestPriority schemas
