# app/API/V1/Http/Resources/UserResource.php
@@ -17,6 +17,13 @@ class UserResource extends JsonResource
      */
     public function toArray($request)
     {
-        return parent::toArray($request);
+        return [
+            'first_name' => $this->first_name,
+            'last_name' => $this->last_name,
+            'email' => $this->email,
+            'created_at'         => $this->created_at,
+            'updated_at'         => $this->updated_at,
+            'deleted_at'         => $this->deleted_at,
+        ];
     }
 }
